--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,59 @@ body {
     letter-spacing: 0.03em;
 }
 
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before {
+    box-sizing: inherit;
+}
+
+/* Стили для обнуления верхних отступов у элементов */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-top: 0;
+}
+
+/* Класс для обнуления базовых свойств у списков (ul) */
+.list {
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+}
+
+/* Класс для обнуления базовых свойств у ссылок */
+.link {
+    text-decoration: none;
+    color: inherit;
+}
+
+/* Свойства для корректного отображения картинок */
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+/* Свойства для обнуления курсива у address */
+address {
+    font-style: normal;
+}
 
 .logo-color {
     color: var(--accent-text-color);
@@ -53,15 +106,39 @@ color: #000;
     list-style: none;
 }
 
-/* site-nav; auth-nav */
+.header {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
 
-.site-nav a {
+/* site-nav; auth-nav */
+.main-nav {
+    display: flex;
+    align-items: center;
+}
+
+.site-nav {
+    display: flex;
+    margin-left: 93px;
+}
+
+.site-item {
+    margin-right: 50px;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     text-decoration: none;
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
+}
+
+.site-item:last-child {
+    margin-right: 0;
+}
+
+.site-item a {
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .site-nav .link.current {
@@ -72,7 +149,15 @@ color: #000;
     color: var(--accent-text-color);
 }
 
+.contact-nav {
+    display: flex;
+    margin-left: auto;
+}
+
 .contact-nav a {
+    margin-left: 50px;
+    padding-top: 32px;
+    padding-bottom: 32px;
     font-size: 14px;
     font-weight: 500;
     line-height: 1.14;
@@ -80,6 +165,8 @@ color: #000;
     text-decoration: none;
     color: var(--secondary-text-color);
 }
+
+
 .contact-nav .link:hover {
     color: var(--accent-text-color);
 }
@@ -87,20 +174,22 @@ color: #000;
 /* hero */
 
 .hero {
+    display: block;
+    text-align: center;
+    margin-bottom: 94px;
     background-color: #2F303A;
 }
 
 .hero-button {
-    width: 200px;
-    height: 50px;
-    left: 700px;
-    top: 430px;
+    margin-bottom: 200px;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 32px;
     font-weight: 700;
     font-size: 16px;
     background: #2196F3;
     line-height: 1.87;
     letter-spacing: 00.06em;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     color: var(--background-color);
 }
 
@@ -110,7 +199,12 @@ color: #000;
 }
 
 .hero-title {
-    text-transform: uppercase;
+    display: block;
+    width: 696px;
+    margin-bottom: 30px;
+    padding-top: 200px;
+    margin-left: auto;
+    margin-right: auto;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -119,8 +213,18 @@ color: #000;
 }
 
 /* our features */
+.features {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 94px;
+}
+
+.benefits-item {
+    width: 270px;
+}
 
 .title {
+    margin-bottom: 10px;
     font-size: 14px;
     text-transform: uppercase;
     font-weight: 700;
@@ -141,12 +245,61 @@ color: #000;
     font-size: 36px;
     line-height: 1.14;
     color: var(--primary-text-color);
+    text-align: center;
+    margin-bottom: 50px;
 }
 
+.section-item {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 50px;
+}
 
+.actives {
+    text-align: center;
+    margin-bottom: 50px;
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.cards {
+    width: 370px;
+    margin-right: 30px;
+}
+
+.cards:last-child {
+    margin-right: 0;
+}
 /* Наша команда */
 
+.main-team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.section-team {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.team-item {
+    margin-right: 30px;
+    width: 270px;
+    height: 368px;
+    left: 515px;
+    top: 1635px;
+    background: var(--background-color);
+        /* material shadow v1 */
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team-item:last-child {
+    margin-right: 0;
+}
+
 .team {
+    text-align: center;
     font-size: 16px;
     line-height: 1.18;
     font-weight: 500;
@@ -154,6 +307,7 @@ color: #000;
 }
 
 .team-list {
+    text-align: center;
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.03em;
@@ -161,13 +315,20 @@ color: #000;
     color: var(--secondary-text-color);
 }
 
+.team-margin {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
 /* footer */
 
 .footer {
     background-color: #2F303A;
+    padding-bottom: 60px;
+    padding-top: 60px;
 }
 
 .footer-logo {
+    padding-bottom: 10px;
     font-family: 'Raleway';
     font-weight: 700;
     font-size: 26px;
@@ -181,6 +342,8 @@ color: #000;
 }
 
 .adress-text {
+    padding-top: 10px;
+    padding-bottom: 4px;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
@@ -208,12 +371,29 @@ color: #000;
 }
 
 /* Portfolio part */
-
-.btn-list {
-    list-style: none;
+.portfolio {
+    width: 1200px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin: 0 auto;
+}
+.btn {
+    padding-top: 94px;
+    padding-bottom: 34px;
+    text-align: center;
 }
 
+.btn-list {
+    display: flex;
+    margin-right: 8px;
+    justify-content: center;
+    margin-bottom: 34px;
+}
+
+
+
 .portfolio-buttons {
+    margin-right: 8px;
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -221,7 +401,9 @@ color: #000;
     letter-spacing: 0.03em;
     background-color: var(--background-color);
     color: var(--primary-text-color);
+    border-radius: 4px;
 }
+
 
 .portfolio-buttons:hover {
     background-color: var(--accent-text-color);
@@ -231,10 +413,36 @@ color: #000;
 /* foto in portfolio */
 
 .portfolio-list {
+    margin-top: 0;
     list-style: none;
+    display: flex;
+    flex-wrap: wrap;
 }
 
+.photo-portfolio {
+    box-sizing: border-box;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: 370px;
+    height: 404px;
+    left: 215px;
+    top: 262px;
+    
+    background: var(--background-color);
+    border: 1px solid #EEEEEE;
+}
+
+.photo-portfolio:not:(nth-child(3n)) {
+    margin-right: 30px;
+}
+
+.photo-portfolio:nth-last-child(-n+3) {
+    margin-bottom: 0;
+}
+
+
 .portfolio-text {
+    margin-bottom: 4px;
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -243,6 +451,7 @@ color: #000;
 }
 
 .portfolio-item {
+    margin-bottom: 0;
     font-weight: 400;
     font-size: 16px;
     line-height: 30px;
@@ -253,4 +462,8 @@ color: #000;
 .portfolio-buttons.active {
     background-color: var(--accent-text-color);
     color: var(--background-color);
+}
+
+.photo-border {
+    padding: 20px 24px;
 }
