--- a/css/styles.css
+++ b/css/styles.css
@@ -199,6 +199,7 @@ color: #000;
 }
 
 .hero-title {
+    text-transform: uppercase;
     display: block;
     width: 696px;
     margin-bottom: 30px;
@@ -385,23 +386,25 @@ color: #000;
 
 .btn-list {
     display: flex;
-    margin-right: 8px;
     justify-content: center;
-    margin-bottom: 34px;
+    margin-bottom: 50px;
 }
 
-
+.btn-list .item + .item {
+    margin-left: 8px;
+}
 
 .portfolio-buttons {
-    margin-right: 8px;
+    padding: 6px 22px;
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.6;
     letter-spacing: 0.03em;
-    background-color: var(--background-color);
+    background-color: var(--buttons-color);
     color: var(--primary-text-color);
     border-radius: 4px;
+    border-color: transparent;
 }
 
 
