--- a/css/styles.css
+++ b/css/styles.css
@@ -298,6 +298,7 @@ justify-content: space-between;
 }
 
 .team-list {
+    margin-bottom: 0;
     text-align: center;
     font-size: 16px;
     line-height: 1.18;
@@ -320,6 +321,7 @@ justify-content: space-between;
 
 .footer-logo {
     display: block;
+    font-family: 'Raleway';
     margin-bottom: 20px;
     font-weight: 700;
     font-size: 26px;
